[metadata]
name = API
version = attr: api.__version__
description = API server
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    alembic >= 1.0.10, < 1.1
    Flask >= 1.0.2, < 1.1
    psycopg2-binary >= 2.8.2, < 2.9
    SQLAlchemy >= 1.2.17, < 1.3
    tornado >= 6.0.2, < 6.1

[options.extras_require]
tests =
    flake8 >= 3.7.7, < 3.8
    flake8-import-order >= 0.18.1, < 0.19
    pytest >= 4.4.1, < 4.5
    pytest-flake8 >= 1.0.4, < 1.1
    typeguard >= 2.3.1, < 2.4

[flake8]
exclude = .venv
import-order-style = pycharm
application-import-names = api, tests

[tool:pytest]
addopts = -vv --flake8 --ff
